test/data/semantic/bad/match_arm_enum_variant_mismatch.coy
enum E {
    A(),
    B()
}

fn f(x: E) -> i64 {
    match x {
        E::B() => 1
    }
}

fn main() -> () {
    ()
}
